Inclusion de nuevos metodos para crear evento

--- a/src/app/components/modal-date/modal-date.component.html
+++ b/src/app/components/modal-date/modal-date.component.html
@@ -27,7 +27,7 @@
     <div class="col-md-12">
       <div class="form-group">
         <label>Start</label>
-        <span class="form-control">{{eventDate.start | date:'dd/MM/yyyy hh:mm'}}</span>
+        <span class="form-control">{{eventDate.start | date:'dd/MM/yyyy H:mm'}}</span>
       </div>
     </div>
   </div>
@@ -35,7 +35,7 @@
     <div class="col-md-12">
       <div class="form-group">
         <label>End</label>
-        <span class="form-control">{{eventDate.end | date:'dd/MM/yyyy hh:mm'}}</span>
+        <span class="form-control">{{eventDate.end | date:'dd/MM/yyyy H:mm'}}</span>
       </div>
     </div>
   </div>
